maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:57: error: too many arguments for method casesAdjacentes: (pos: Array[Int])Array[Array[Int]]
        for (i <- casesAdjacentes(x, y)) {
                                 ^